--- a/app/src/main/res/layout/fragment_search_pw.xml
+++ b/app/src/main/res/layout/fragment_search_pw.xml
@@ -23,7 +23,7 @@
       app:fontWeight="medium"
       android:text="비밀번호 찾기"
       android:textColor="@color/colorBlack"
-      android:textSize="20sp"
+      android:textSize="20dp"
       android:gravity="center"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
@@ -59,7 +59,7 @@
           app:fontWeight="demilight"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
-          android:textSize="24sp"
+          android:textSize="24dp"
           android:textColor="@color/colorBlack"
           android:text="회원 정보에 등록된 "
           android:gravity="left" />
@@ -68,7 +68,7 @@
           app:fontWeight="demilight"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
-          android:textSize="24sp"
+          android:textSize="24dp"
           android:textColor="@color/colorPuzi"
           android:text="아이디"
           android:gravity="left" />
@@ -77,7 +77,7 @@
           app:fontWeight="demilight"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
-          android:textSize="24sp"
+          android:textSize="24dp"
           android:textColor="@color/colorBlack"
           android:text="와"
           android:gravity="left" />
@@ -93,7 +93,7 @@
           app:fontWeight="demilight"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
-          android:textSize="24sp"
+          android:textSize="24dp"
           android:textColor="@color/colorPuzi"
           android:text="이메일 주소"
           android:gravity="left" />
@@ -103,7 +103,7 @@
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:layout_marginBottom="20dp"
-          android:textSize="24sp"
+          android:textSize="24dp"
           android:textColor="@color/colorBlack"
           android:text="를 입력하세요"
           android:gravity="left" />
@@ -116,7 +116,7 @@
         android:layout_width="match_parent"
         android:layout_height="54dp"
         android:layout_marginBottom="8dp"
-        android:textSize="15sp"
+        android:textSize="15dp"
         android:id="@+id/edit_search_id"
         android:hint="아이디를 입력하세요."
         android:inputType="textUri"
@@ -132,7 +132,7 @@
         android:layout_width="match_parent"
         android:layout_height="54dp"
         android:layout_marginBottom="24dp"
-        android:textSize="15sp"
+        android:textSize="15dp"
         android:id="@+id/edit_search_email"
         android:hint="이메일 주소를 입력하세요."
         android:maxLength="30"
@@ -148,7 +148,7 @@
         android:layout_height="54dp"
         android:layout_marginBottom="20dp"
         android:id="@+id/btn_srchpw"
-        android:textSize="15sp"
+        android:textSize="15dp"
         android:text="비밀번호 찾기"
         android:textColor="@color/colorWhite"
         android:background="@drawable/button_puzi"/>
@@ -169,7 +169,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:textColor="#6D6D6D"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:text="아직 푸지 회원이 아닌가요?"
         android:layout_weight="1"/>
 
@@ -182,7 +182,7 @@
         android:textColor="@color/colorPuzi"
         android:background="@null"
         android:text="무료 회원가입"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:layout_weight="1"/>
 
     </LinearLayout>
