--- a/app/src/main/res/layout/fragment_setting_favorites.xml
+++ b/app/src/main/res/layout/fragment_setting_favorites.xml
@@ -46,7 +46,7 @@
             android:background="@drawable/button_favorite_off"
             android:id="@+id/btn_setting_beauty"
             android:text="뷰티"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="@color/colorTextGray"
             android:layout_marginRight="8dp"
             android:layout_weight="1"
@@ -58,7 +58,7 @@
             android:background="@drawable/button_favorite_off"
             android:id="@+id/btn_setting_shopping"
             android:text="쇼핑"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="@color/colorTextGray"
             android:layout_marginLeft="8dp"
             android:layout_weight="1"
@@ -78,7 +78,7 @@
             android:background="@drawable/button_favorite_off"
             android:id="@+id/btn_setting_game"
             android:text="게임"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="@color/colorTextGray"
             android:layout_marginRight="8dp"
             android:layout_weight="1"
@@ -90,7 +90,7 @@
             android:background="@drawable/button_favorite_off"
             android:id="@+id/btn_setting_eat"
             android:text="외식"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="@color/colorTextGray"
             android:layout_marginLeft="8dp"
             android:layout_weight="1"
@@ -110,7 +110,7 @@
             android:background="@drawable/button_favorite_off"
             android:id="@+id/btn_setting_tour"
             android:text="여행\n(항공,호텔)"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="@color/colorTextGray"
             android:layout_marginRight="8dp"
             android:layout_weight="1"
@@ -170,7 +170,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="13dp"
-        android:textSize="12sp"
+        android:textSize="12dp"
         android:textColor="#333333"
         android:text="3개 이상 선택해주세요"
         android:gravity="left" android:id="@+id/textView5"/>
@@ -186,7 +186,7 @@
       android:layout_height="54dp"
       android:layout_marginBottom="20dp"
       android:id="@+id/btn_setting_user_modify"
-      android:textSize="16sp"
+      android:textSize="16dp"
       android:text="수정하기"
       android:textColor="@color/colorWhite"
       android:background="@drawable/button_puzi"/>
