--- a/app/src/main/res/layout/fragment_setting_notice_item_parent.xml
+++ b/app/src/main/res/layout/fragment_setting_notice_item_parent.xml
@@ -14,7 +14,7 @@
       app:fontWeight="medium"
       android:layout_marginLeft="16dp"
       android:textColor="#333333"
-      android:textSize="16sp"
+      android:textSize="16dp"
       android:layout_gravity="center_vertical|left"
       android:layout_centerVertical="true"
       android:layout_width="wrap_content"
