--- a/app/src/main/res/layout/item_channel_detail_reply.xml
+++ b/app/src/main/res/layout/item_channel_detail_reply.xml
@@ -55,7 +55,7 @@
           android:text="0"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:textSize="10sp"
+          android:textSize="10dp"
           android:textColor="#dadada"
           android:layout_marginRight="7dp"
           android:lineSpacingExtra="0sp"
@@ -97,7 +97,7 @@
           android:text="0"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:textSize="10sp"
+          android:textSize="10dp"
           android:textColor="#dadada"
           android:layout_marginRight="7dp"
           android:lineSpacingExtra="0sp"
@@ -120,7 +120,7 @@
     android:text="comment"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textSize="15sp"
+    android:textSize="15dp"
     android:textColor="#333333"
     android:lineSpacingExtra="9sp"
     android:layout_marginLeft="16dp"
