--- a/app/src/main/res/layout/item_store_challenge_item.xml
+++ b/app/src/main/res/layout/item_store_challenge_item.xml
@@ -29,7 +29,7 @@
         android:id="@+id/tv_store_challenge_logo_name"
         app:fontWeight="medium"
         android:layout_marginLeft="6dp"
-        android:textSize="11sp"
+        android:textSize="11dp"
         android:layout_gravity="center_vertical|left"
         android:layout_width="0dp"
         android:layout_weight="1"
@@ -39,7 +39,7 @@
         android:text="1000명"
         android:id="@+id/tv_store_challenge_count"
         app:fontWeight="bold"
-        android:textSize="8sp"
+        android:textSize="8dp"
         android:textColor="#ff5146"
         android:layout_gravity="center_vertical|left"
         android:layout_width="wrap_content"
@@ -48,7 +48,7 @@
       <kr.puzi.puzi.ui.customview.NotoTextView
         android:text="참여중"
         app:fontWeight="medium"
-        android:textSize="8sp"
+        android:textSize="8dp"
         android:textColor="#ff5146"
         android:layout_gravity="center_vertical|left"
         android:layout_width="wrap_content"
@@ -75,7 +75,7 @@
       android:layout_marginStart="9dp"
       android:layout_marginEnd="9dp"
       android:lines="2"
-      android:textSize="14sp"
+      android:textSize="14dp"
       android:textColor="#333333"
       android:id="@+id/iv_store_challenge_item_name"/>
 
@@ -86,7 +86,7 @@
       android:layout_gravity="left"
       android:layout_marginBottom="12dp"
       android:layout_marginStart="9dp"
-      android:textSize="14sp"
+      android:textSize="14dp"
       android:fontFamily="sans-serif-medium"
       android:textStyle="normal"
       android:textColor="#333333"
