--- a/app/src/main/res/layout/item_store_saving_item.xml
+++ b/app/src/main/res/layout/item_store_saving_item.xml
@@ -29,7 +29,7 @@
         android:id="@+id/tv_store_saving_logo_name"
         app:fontWeight="medium"
         android:layout_marginLeft="6dp"
-        android:textSize="11sp"
+        android:textSize="11dp"
         android:layout_gravity="center_vertical|left"
         android:layout_width="0dp"
         android:layout_weight="1"
@@ -62,7 +62,7 @@
         android:gravity="center"
         android:text="10%"
         android:textColor="@color/colorWhite"
-        android:textSize="21sp"
+        android:textSize="21dp"
         android:layout_marginBottom="20dp"
         android:layout_width="48dp"
         android:layout_height="48dp"/>
@@ -77,7 +77,7 @@
       android:layout_marginTop="5dp"
       android:layout_marginStart="9dp"
       android:layout_marginEnd="9dp"
-      android:textSize="14sp"
+      android:textSize="14dp"
       android:lines="2"
       android:textColor="#333333"
       android:id="@+id/tv_store_saving_item_name"/>
@@ -89,7 +89,7 @@
       android:layout_gravity="left"
       android:layout_marginBottom="12dp"
       android:layout_marginStart="9dp"
-      android:textSize="14sp"
+      android:textSize="14dp"
       android:fontFamily="sans-serif-medium"
       android:textStyle="normal"
       android:textColor="#333333"
