--- a/app/src/main/res/layout/view_screen_on_alert.xml
+++ b/app/src/main/res/layout/view_screen_on_alert.xml
@@ -43,7 +43,7 @@
         android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:textSize="14dp"
         android:id="@+id/tv_top_title"
         android:textColor="#666666"
         android:lineSpacingExtra="-1sp"
@@ -55,7 +55,7 @@
         android:layout_marginTop="1dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:textSize="14dp"
         android:id="@+id/tv_top_comment"
         android:textColor="#666666"
         android:lineSpacingExtra="-1sp"
