--- a/app/src/main/res/layout/activity_advertisement_detail.xml
+++ b/app/src/main/res/layout/activity_advertisement_detail.xml
@@ -51,7 +51,7 @@
           android:text="companyName"
           android:layout_width="wrap_content"
           android:layout_height="19dp"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="#6D6D6D"
           android:layout_gravity="center_vertical"
           android:id="@+id/tv_companyId"/>
@@ -111,7 +111,7 @@
           <kr.puzi.puzi.ui.customview.RobotoTextView
             android:text="Q"
             android:textColor="#333333"
-            android:textSize="20sp"
+            android:textSize="20dp"
             android:gravity="left"
             android:layout_marginRight="6dp"
             android:layout_width="15dp"
@@ -122,7 +122,7 @@
             android:id="@+id/tv_ad_quiz"
             android:text="광고의 할인하는 상품명은?"
             android:textColor="#333333"
-            android:textSize="20sp"
+            android:textSize="20dp"
             android:gravity="left"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -140,7 +140,7 @@
             app:fontWeight="medium"
             android:text="(힌트는 상단에 있습니다)"
             android:textColor="#333333"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:gravity="left"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -272,7 +272,7 @@
             app:fontWeight="regular"
             android:id="@+id/tv_advertise_progress"
             android:text="1"
-            android:textSize="15sp"
+            android:textSize="15dp"
             android:textColor="@color/colorPuzi"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"/>
@@ -282,7 +282,7 @@
             app:fontWeight="regular"
             android:id="@+id/tv_advertise_progress_2"
             android:text="초"
-            android:textSize="12sp"
+            android:textSize="12dp"
             android:textColor="@color/colorPuzi"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"/>
