--- a/app/src/main/res/layout/activity_channel_filter.xml
+++ b/app/src/main/res/layout/activity_channel_filter.xml
@@ -36,7 +36,7 @@
           android:layout_height="wrap_content"
           android:gravity="center_horizontal"
           android:textColor="#333333"
-          android:textSize="20sp"
+          android:textSize="20dp"
           android:layout_gravity="center_vertical"
           android:layout_weight="1"/>
 
@@ -63,7 +63,7 @@
         android:layout_marginTop="19dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:textColor="#333333" android:id="@+id/textView4"/>
 
       <LinearLayout
@@ -89,7 +89,7 @@
           android:layout_gravity="center_vertical"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="#6d6d6d"/>
 
         <ImageButton
@@ -108,7 +108,7 @@
           android:layout_gravity="center_vertical"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="#6d6d6d"/>
 
       </LinearLayout>
@@ -120,7 +120,7 @@
         android:layout_marginTop="25dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:textColor="#333333" android:id="@+id/textView3" android:layout_weight="1"/>
 
       <LinearLayout
@@ -146,7 +146,7 @@
           android:layout_gravity="center_vertical"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="#6d6d6d"/>
 
         <ImageButton
@@ -165,7 +165,7 @@
           android:layout_gravity="center_vertical"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="#6d6d6d"/>
 
       </LinearLayout>
@@ -193,7 +193,7 @@
           android:layout_gravity="center_vertical"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="#6d6d6d"/>
 
         <ImageButton
@@ -212,7 +212,7 @@
           android:layout_gravity="center_vertical"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="#6d6d6d"/>
 
       </LinearLayout>
@@ -224,7 +224,7 @@
         android:layout_marginTop="28dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:textColor="#333333" android:id="@+id/textView2"/>
 
       <LinearLayout
@@ -241,7 +241,7 @@
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_marginRight="16dp"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="#dadada"
           android:background="@drawable/button_favorite_off"
           android:id="@+id/btn_channel_filter_beauty"
@@ -253,7 +253,7 @@
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:textColor="#dadada"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:id="@+id/btn_channel_filter_shopping"
           android:background="@drawable/button_favorite_off"
           android:layout_weight="1"/>
@@ -273,7 +273,7 @@
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:textColor="#dadada"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:layout_marginRight="16dp"
           android:id="@+id/btn_channel_filter_eat"
           android:background="@drawable/button_favorite_off"
@@ -285,7 +285,7 @@
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:textColor="#dadada"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:id="@+id/btn_channel_filter_tour"
           android:background="@drawable/button_favorite_off"
           android:layout_weight="1"/>
@@ -307,7 +307,7 @@
           android:layout_marginRight="16dp"
           android:layout_marginTop="0dp"
           android:textColor="#dadada"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:id="@+id/btn_channel_filter_culture"
           android:background="@drawable/button_favorite_off"
           android:layout_weight="1"/>
@@ -318,7 +318,7 @@
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:textColor="#dadada"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:id="@+id/btn_channel_filter_game"
           android:background="@drawable/button_favorite_off"
           android:layout_weight="1"/>
@@ -339,7 +339,7 @@
           android:layout_height="match_parent"
           android:layout_marginRight="16dp"
           android:textColor="#dadada"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:id="@+id/btn_channel_filter_finance"
           android:background="@drawable/button_favorite_off"
           android:layout_weight="1"/>
