--- a/app/src/main/res/layout/activity_editors_page_webview.xml
+++ b/app/src/main/res/layout/activity_editors_page_webview.xml
@@ -31,7 +31,7 @@
         android:gravity="center_horizontal"
         android:textColor="#333333"
         android:layout_marginRight="40dp"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:layout_gravity="center_vertical"
         android:id="@+id/tv_channel_editors_page_title"
         android:layout_weight="1"/>
