--- a/app/src/main/res/layout/activity_myworry_write.xml
+++ b/app/src/main/res/layout/activity_myworry_write.xml
@@ -26,7 +26,7 @@
       android:id="@+id/tv_store_purchase_title"
       android:gravity="center"
       android:layout_marginRight="50dp"
-      android:textSize="20sp"
+      android:textSize="20dp"
       android:textColor="#333333"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
@@ -62,7 +62,7 @@
         <kr.puzi.puzi.ui.customview.NotoTextView
           app:fontWeight="medium"
           android:text="질문?"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="#333333"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
@@ -70,7 +70,7 @@
         <kr.puzi.puzi.ui.customview.NotoTextView
           app:fontWeight="medium"
           android:text="(30자 이내)"
-          android:textSize="12sp"
+          android:textSize="12dp"
           android:textColor="#333333"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
@@ -81,7 +81,7 @@
         android:id="@+id/et_myworry_write_question"
         app:fontWeight="regular"
         android:layout_marginBottom="25dp"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:textColor="#333333"
         android:textColorHint="#bbbbbb"
         android:background="@drawable/edittext"
@@ -101,7 +101,7 @@
         <kr.puzi.puzi.ui.customview.NotoTextView
           app:fontWeight="medium"
           android:text="답변"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="#333333"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
@@ -109,7 +109,7 @@
         <kr.puzi.puzi.ui.customview.NotoTextView
           app:fontWeight="medium"
           android:text="(10자 이내)"
-          android:textSize="12sp"
+          android:textSize="12dp"
           android:textColor="#333333"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
@@ -138,7 +138,7 @@
           android:layout_gravity="center_vertical"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="#6d6d6d"/>
 
         <ImageButton
@@ -157,7 +157,7 @@
           android:layout_gravity="center_vertical"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="#6d6d6d"/>
 
       </LinearLayout>
@@ -175,7 +175,7 @@
             android:background="@drawable/edittext"
             android:gravity="center|left"
             android:hint="1번 답변"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="#333333"
             android:textColorHint="#bbbbbb"
             android:paddingLeft="16dp"
@@ -190,7 +190,7 @@
             android:background="@drawable/edittext"
             android:gravity="center|left"
             android:hint="2번 답변"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="#333333"
             android:textColorHint="#bbbbbb"
             android:paddingLeft="16dp"
@@ -205,7 +205,7 @@
             android:background="@drawable/edittext"
             android:gravity="center|left"
             android:hint="3번 답변"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="#333333"
             android:textColorHint="#bbbbbb"
             android:paddingLeft="16dp"
@@ -220,7 +220,7 @@
             android:background="@drawable/edittext"
             android:gravity="center|left"
             android:hint="4번 답변"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="#333333"
             android:textColorHint="#bbbbbb"
             android:paddingLeft="16dp"
@@ -234,7 +234,7 @@
       <kr.puzi.puzi.ui.customview.NotoTextView
         app:fontWeight="medium"
         android:text="타입"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:textColor="#333333"
         android:layout_marginBottom="5dp"
         android:layout_width="wrap_content"
@@ -262,7 +262,7 @@
         <kr.puzi.puzi.ui.customview.NotoTextView
           app:fontWeight="medium"
           android:text="상위노출 "
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="#333333"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
@@ -271,7 +271,7 @@
           app:fontWeight="medium"
           android:id="@+id/tv_myworry_write_item_top_price"
           android:text="(+P)"
-          android:textSize="12sp"
+          android:textSize="12dp"
             android:layout_weight="1"
           android:textColor="#333333"
           android:layout_width="0dp"
@@ -302,7 +302,7 @@
       <kr.puzi.puzi.ui.customview.NotoTextView
         app:fontWeight="regular"
         android:text="일주일간 상위노출됩니다."
-        android:textSize="14sp"
+        android:textSize="14dp"
         android:textColor="#333333"
         android:layout_marginBottom="25dp"
         android:layout_width="wrap_content"
@@ -318,7 +318,7 @@
         <kr.puzi.puzi.ui.customview.NotoTextView
           app:fontWeight="medium"
           android:text="타겟 "
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="#333333"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
@@ -329,7 +329,7 @@
             android:layout_height="wrap_content"
             android:text="(+P)"
             android:textColor="#333333"
-            android:textSize="12sp"
+            android:textSize="12dp"
             app:fontWeight="medium" />
 
         <View
@@ -379,7 +379,7 @@
           android:layout_weight="1"
           android:layout_width="0dp"
           android:textColor="#bbbbbb"
-          android:textSize="13sp"
+          android:textSize="13dp"
           android:background="@drawable/button_favorite_off"
           android:layout_marginRight="10dp"
           android:layout_height="30dp"/>
@@ -390,7 +390,7 @@
           android:layout_weight="1"
           android:layout_width="0dp"
           android:textColor="#bbbbbb"
-          android:textSize="13sp"
+          android:textSize="13dp"
           android:background="@drawable/button_favorite_off"
           android:layout_marginRight="10dp"
           android:layout_height="30dp"/>
@@ -419,7 +419,7 @@
           android:layout_weight="1"
           android:layout_width="0dp"
           android:textColor="#bbbbbb"
-          android:textSize="13sp"
+          android:textSize="13dp"
           android:background="@drawable/button_favorite_off"
           android:layout_marginRight="10dp"
           android:layout_height="30dp"/>
@@ -430,7 +430,7 @@
           android:text="20대"
           android:layout_width="0dp"
           android:textColor="#bbbbbb"
-          android:textSize="13sp"
+          android:textSize="13dp"
           android:background="@drawable/button_favorite_off"
           android:layout_marginRight="10dp"
           android:layout_height="30dp"/>
@@ -441,7 +441,7 @@
           android:text="30대"
           android:layout_width="0dp"
           android:textColor="#bbbbbb"
-          android:textSize="13sp"
+          android:textSize="13dp"
           android:background="@drawable/button_favorite_off"
           android:layout_marginRight="10dp"
           android:layout_height="30dp"/>
@@ -452,7 +452,7 @@
           android:text="40대"
           android:layout_width="0dp"
           android:textColor="#bbbbbb"
-          android:textSize="13sp"
+          android:textSize="13dp"
           android:background="@drawable/button_favorite_off"
           android:layout_height="30dp"/>
 
@@ -463,7 +463,7 @@
     <kr.puzi.puzi.ui.customview.NotoTextView
       app:fontWeight="demilight"
       android:text="- 해당질문이 시작되면 환불할 수 없습니다.\n- 음란성, 폭력성, 도배 등의 부적절한 질문은 자동으로 삭제될 수 	있으며, 지속될 경우 작성하기가 제한될 수 있습니다."
-      android:textSize="10sp"
+      android:textSize="10dp"
       android:textColor="#333333"
       android:layout_marginBottom="7dp"
       android:layout_width="match_parent"
@@ -475,7 +475,7 @@
       android:textColor="@color/colorWhite"
       app:fontWeight="bold"
       android:text="작성하기"
-      android:textSize="16sp"
+      android:textSize="16dp"
       android:background="@drawable/button_puzi"
       android:layout_width="match_parent"
       android:layout_height="54dp"/>
