--- a/app/src/main/res/layout/activity_recommend.xml
+++ b/app/src/main/res/layout/activity_recommend.xml
@@ -23,7 +23,7 @@
       app:fontWeight="regular"
       android:text="친구 추천"
       android:textColor="#333333"
-      android:textSize="20sp"
+      android:textSize="20dp"
       android:gravity="center"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
@@ -71,7 +71,7 @@
           <kr.puzi.puzi.ui.customview.NotoTextView
             app:fontWeight="demilight"
             android:text="친구에게 푸지를 추천하고"
-            android:textSize="24sp"
+            android:textSize="24dp"
             android:textColor="#333333"
             android:layout_marginTop="16.6dp"
             android:layout_width="match_parent"
@@ -85,7 +85,7 @@
             <kr.puzi.puzi.ui.customview.NotoTextView
               app:fontWeight="medium"
               android:text="100P"
-              android:textSize="24sp"
+              android:textSize="24dp"
               android:textColor="@color/colorPuzi"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
@@ -93,7 +93,7 @@
             <kr.puzi.puzi.ui.customview.NotoTextView
               app:fontWeight="demilight"
               android:text="를 받으세요!"
-              android:textSize="24sp"
+              android:textSize="24dp"
               android:textColor="#333333"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
@@ -112,7 +112,7 @@
             app:fontWeight="regular"
             android:gravity="center"
             android:text="추천 아이디"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="#333333"
             android:layout_marginTop="10dp"
             android:layout_gravity="center_horizontal"
@@ -122,7 +122,7 @@
           <kr.puzi.puzi.ui.customview.NotoTextView
             app:fontWeight="medium"
             android:id="@+id/tv_recommend_id"
-            android:textSize="28sp"
+            android:textSize="28dp"
             android:textColor="#333333"
             android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
@@ -146,7 +146,7 @@
             <kr.puzi.puzi.ui.customview.NotoTextView
               app:fontWeight="demilight"
               android:text="친구 회원 가입시 "
-              android:textSize="16sp"
+              android:textSize="16dp"
               android:textColor="#6d6d6d"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
@@ -154,7 +154,7 @@
             <kr.puzi.puzi.ui.customview.NotoTextView
               app:fontWeight="medium"
               android:text="100P"
-              android:textSize="16sp"
+              android:textSize="16dp"
               android:textColor="@color/colorPuzi"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
@@ -162,7 +162,7 @@
             <kr.puzi.puzi.ui.customview.NotoTextView
               app:fontWeight="demilight"
               android:text=" 추가 적립 가능합니다"
-              android:textSize="16sp"
+              android:textSize="16dp"
               android:textColor="#333333"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
