--- a/app/src/main/res/layout/activity_store_purchase.xml
+++ b/app/src/main/res/layout/activity_store_purchase.xml
@@ -40,7 +40,7 @@
             android:id="@+id/tv_store_purchase_title"
             android:gravity="center"
             android:layout_marginRight="50dp"
-            android:textSize="20sp"
+            android:textSize="20dp"
             android:textColor="#333333"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
@@ -81,7 +81,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:textSize="20dp"
             android:textColor="#333333"
             android:gravity="center_horizontal"
             android:layout_marginBottom="1dp"
@@ -93,7 +93,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:textSize="20dp"
             android:textStyle="bold"
             android:textColor="#333333"
             android:gravity="center_horizontal"
@@ -128,7 +128,7 @@
               <kr.puzi.puzi.ui.customview.NotoTextView
                 android:id="@+id/tv_store_purchase_count"
                 app:fontWeight="medium"
-                android:textSize="15sp"
+                android:textSize="15dp"
                 android:textColor="#333333"
                 android:gravity="center"
                 android:text="1"
@@ -180,7 +180,7 @@
               android:layout_width="52dp"
               android:layout_height="wrap_content"
               android:layout_marginRight="13dp"
-              android:textSize="14sp"
+              android:textSize="14dp"
               android:textColor="#6d6d6d"
               android:id="@+id/textView10"/>
 
@@ -189,7 +189,7 @@
               android:text="text"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
-              android:textSize="12sp"
+              android:textSize="12dp"
               android:textColor="#6d6d6d"
               android:id="@+id/tv_store_purchase_comment"
               android:layout_weight="1"/>
@@ -211,7 +211,7 @@
               android:layout_width="52dp"
               android:layout_height="wrap_content"
               android:layout_marginRight="13dp"
-              android:textSize="14sp"
+              android:textSize="14dp"
               android:textColor="#6d6d6d"
               android:id="@+id/textView11"/>
 
@@ -220,7 +220,7 @@
               android:text="TextView"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
-              android:textSize="12sp"
+              android:textSize="12dp"
               android:textColor="#6d6d6d"
               android:id="@+id/tv_store_purchase_expiryDay"
               android:layout_weight="1"/>
@@ -240,7 +240,7 @@
       android:text="구매하기"
       android:layout_width="match_parent"
       android:layout_height="55dp"
-      android:textSize="16sp"
+      android:textSize="16dp"
       android:textColor="#ffffff"
       android:id="@+id/btn_store_purchase"/>
 
