--- a/app/src/main/res/layout/activity_store_saving.xml
+++ b/app/src/main/res/layout/activity_store_saving.xml
@@ -26,7 +26,7 @@
       app:fontWeight="medium"
       android:gravity="center"
       android:layout_marginRight="50dp"
-      android:textSize="20sp"
+      android:textSize="20dp"
       android:textColor="@color/colorWhite"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
@@ -60,7 +60,7 @@
 
         <kr.puzi.puzi.ui.customview.NotoTextView
           app:fontWeight="medium"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:layout_gravity="center_vertical|left"
           android:text="푸지적금"
           android:layout_width="wrap_content"
