--- a/app/src/main/res/layout/activity_store_saving_detail.xml
+++ b/app/src/main/res/layout/activity_store_saving_detail.xml
@@ -40,7 +40,7 @@
             app:fontWeight="medium"
             android:gravity="center"
             android:layout_marginRight="50dp"
-            android:textSize="20sp"
+            android:textSize="20dp"
             android:textColor="#333333"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
@@ -76,7 +76,7 @@
               android:layout_gravity="center_horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:textSize="22sp"
+              android:textSize="22dp"
               android:textColor="#333333"
               android:gravity="center_horizontal"
               android:layout_marginTop="17dp"
@@ -103,7 +103,7 @@
             app:fontWeight="bold"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="24dp"
-            android:textSize="15sp"
+            android:textSize="15dp"
             android:textColor="#333333"
             android:text="적금 조건"
             android:layout_width="81dp"
@@ -113,7 +113,7 @@
             app:fontWeight="regular"
             android:id="@+id/tv_store_saving_point_count"
             android:layout_gravity="center_vertical"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="#333333"
             android:text=""
             android:layout_marginLeft="10dp"
@@ -133,7 +133,7 @@
             app:fontWeight="bold"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="24dp"
-            android:textSize="15sp"
+            android:textSize="15dp"
             android:textColor="#333333"
             android:text="하루 적금액"
             android:layout_width="81dp"
@@ -179,7 +179,7 @@
           <kr.puzi.puzi.ui.customview.NotoTextView
             app:fontWeight="regular"
             android:text="- 적금금액은 매일 새벽 1시에 입금되며, 입금된 금액은 사용할 수 없습니다.\n- 해지시 적금금액은 사용 가능합니다."
-            android:textSize="13sp"
+            android:textSize="13dp"
             android:layout_marginTop="12dp"
             android:layout_marginLeft="17dp"
             android:layout_marginRight="17dp"
@@ -200,7 +200,7 @@
               android:layout_width="52dp"
               android:layout_height="wrap_content"
               android:layout_marginRight="13dp"
-              android:textSize="14sp"
+              android:textSize="14dp"
               android:textColor="#6d6d6d"/>
 
             <kr.puzi.puzi.ui.customview.NotoTextView
@@ -208,7 +208,7 @@
               android:text=""
               android:layout_width="0dp"
               android:layout_height="wrap_content"
-              android:textSize="12sp"
+              android:textSize="12dp"
               android:textColor="#6d6d6d"
               android:id="@+id/tv_store_savning_comment"
               android:layout_weight="1"/>
@@ -230,7 +230,7 @@
               android:layout_width="52dp"
               android:layout_height="wrap_content"
               android:layout_marginRight="13dp"
-              android:textSize="14sp"
+              android:textSize="14dp"
               android:textColor="#6d6d6d"/>
 
             <kr.puzi.puzi.ui.customview.NotoTextView
@@ -238,7 +238,7 @@
               android:text=""
               android:layout_width="0dp"
               android:layout_height="wrap_content"
-              android:textSize="12sp"
+              android:textSize="12dp"
               android:textColor="#6d6d6d"
               android:id="@+id/tv_store_saving_expiryDay"
               android:layout_weight="1"/>
@@ -258,7 +258,7 @@
       android:text="적금 가입하기"
       android:layout_width="match_parent"
       android:layout_height="55dp"
-      android:textSize="16sp"
+      android:textSize="16dp"
       android:textColor="#ffffff"
       android:id="@+id/btn_store_saving"/>
 
