--- a/app/src/main/res/layout/activity_store_withdraw.xml
+++ b/app/src/main/res/layout/activity_store_withdraw.xml
@@ -28,7 +28,7 @@
       android:gravity="center_horizontal"
       android:text="출금하기"
       android:layout_gravity="center_vertical"
-      android:textSize="20sp"
+      android:textSize="20dp"
       android:textColor="#333333"
       android:layout_marginRight="44dp"
       android:layout_weight="1"
@@ -52,7 +52,7 @@
         app:fontWeight="medium"
         android:layout_marginTop="11dp"
         android:layout_marginLeft="16dp"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:textColor="#333333"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
@@ -68,7 +68,7 @@
           app:fontWeight="demilight"
           android:layout_marginTop="3dp"
           android:layout_marginLeft="16dp"
-          android:textSize="32sp"
+          android:textSize="32dp"
           android:textStyle="normal"
           android:textColor="#000000"
           android:letterSpacing="0.01"
@@ -100,7 +100,7 @@
           <kr.puzi.puzi.ui.customview.NotoTextView
             app:fontWeight="medium"
             android:text="은행"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="#333333"
             android:layout_marginBottom="3dp"
             android:layout_width="wrap_content"
@@ -123,7 +123,7 @@
           <kr.puzi.puzi.ui.customview.NotoTextView
             app:fontWeight="medium"
             android:text="계좌번호"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="#333333"
             android:layout_marginBottom="3dp"
             android:layout_width="wrap_content"
@@ -134,7 +134,7 @@
             android:id="@+id/et_store_withdraw_bank_account"
             android:background="@drawable/button_store_withdraw_input"
             android:paddingLeft="16dp"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="#6d6d6d"
             android:layout_width="match_parent"
             android:layout_height="54dp"/>
@@ -160,7 +160,7 @@
           <kr.puzi.puzi.ui.customview.NotoTextView
             app:fontWeight="medium"
             android:text="받는 사람"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="#333333"
             android:layout_marginBottom="3dp"
             android:layout_width="wrap_content"
@@ -171,7 +171,7 @@
             android:id="@+id/et_store_withdraw_bank_name"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="#6d6d6d"
             android:background="@drawable/button_store_withdraw_input"
             android:layout_width="125dp"
@@ -188,7 +188,7 @@
           <kr.puzi.puzi.ui.customview.NotoTextView
             app:fontWeight="medium"
             android:text="출금 금액"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="#333333"
             android:layout_marginBottom="3dp"
             android:layout_width="wrap_content"
@@ -214,7 +214,7 @@
         android:layout_marginBottom="17dp"
         android:background="@drawable/button_puzi"
         android:layout_width="match_parent"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:textColor="#ffffff"
         android:layout_height="54dp"/>
 
@@ -229,7 +229,7 @@
         android:text="출금 내역"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="16dp"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:textColor="#333333"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
