--- a/app/src/main/res/layout/dialog_channel_evaluate.xml
+++ b/app/src/main/res/layout/dialog_channel_evaluate.xml
@@ -20,7 +20,7 @@
       android:layout_marginTop="38dp"
       android:layout_marginBottom="19dp"
       android:gravity="center"
-      android:textSize="20sp"
+      android:textSize="20dp"
       android:textColor="#333333"
       android:lineSpacingExtra="-1sp"
       android:text="별점주기"/>
@@ -90,7 +90,7 @@
       android:gravity="center"
       android:layout_marginTop="22dp"
       android:layout_marginBottom="18dp"
-      android:textSize="20sp"
+      android:textSize="20dp"
       android:textColor="#333333"
       android:lineSpacingExtra="-1sp"
       android:text="평가입력"/>
