--- a/app/src/main/res/layout/dialog_myworry_write_confirm.xml
+++ b/app/src/main/res/layout/dialog_myworry_write_confirm.xml
@@ -19,7 +19,7 @@
       android:layout_height="wrap_content"
       android:layout_marginTop="38dp"
       android:gravity="center"
-      android:textSize="20sp"
+      android:textSize="20dp"
       android:textColor="#333333"
       android:lineSpacingExtra="-1sp"
       android:text=""/>
@@ -30,7 +30,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="19dp"
-      android:textSize="20sp"
+      android:textSize="20dp"
       android:textColor="#333333"
       android:lineSpacingExtra="-1sp"
       android:text="질문을 작성하시겠습니까?"/>
@@ -53,7 +53,7 @@
         android:layout_weight="1"
         android:background="@drawable/button_favorite_on"
         android:text="취소"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:textColor="#ff2470"/>
 
       <kr.puzi.puzi.ui.customview.NotoButton
@@ -65,7 +65,7 @@
         android:layout_weight="1"
         android:background="@drawable/button_puzi"
         android:text="확인"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:textColor="@color/colorWhite"/>
 
     </LinearLayout>
