--- a/app/src/main/res/layout/dialog_store_challenge_fail.xml
+++ b/app/src/main/res/layout/dialog_store_challenge_fail.xml
@@ -20,7 +20,7 @@
       android:layout_marginTop="38dp"
       android:layout_marginBottom="19dp"
       android:gravity="center"
-      android:textSize="20sp"
+      android:textSize="20dp"
       android:textColor="#333333"
       android:lineSpacingExtra="-1sp"
       android:text="아쉽지만 다음기회에.."/>
