--- a/app/src/main/res/layout/fragment_brand_list.xml
+++ b/app/src/main/res/layout/fragment_brand_list.xml
@@ -6,7 +6,7 @@
 
   <TextView
     android:text="카테고리"
-    android:textSize="15sp"
+    android:textSize="15dp"
     android:gravity="center_vertical"
     android:layout_marginLeft="10dp"
     android:layout_marginTop="20dp"
