--- a/app/src/main/res/layout/fragment_point_detail.xml
+++ b/app/src/main/res/layout/fragment_point_detail.xml
@@ -23,7 +23,7 @@
         android:id="@+id/tv_point_type"
         android:gravity="center_vertical"
         android:text="가입 축하 포인트 적립"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:layout_width="match_parent"
         android:layout_height="29dp"/>
 
@@ -32,7 +32,7 @@
         android:id="@+id/tv_point_at"
         android:gravity="center_vertical"
         android:text="2017-10-03 20:00"
-        android:textSize="14sp"
+        android:textSize="14dp"
         android:layout_width="match_parent"
         android:layout_height="19dp"/>
 
@@ -49,7 +49,7 @@
         app:fontWeight="regular"
         android:id="@+id/tv_point"
         android:layout_gravity="center_vertical"
-        android:textSize="20sp"
+        android:textSize="20dp"
         android:textColor="@color/colorPuzi"
         android:layout_marginRight="2dp"
         android:layout_width="wrap_content"
