--- a/app/src/main/res/layout/fragment_reply_item.xml
+++ b/app/src/main/res/layout/fragment_reply_item.xml
@@ -18,7 +18,7 @@
       android:layout_width="wrap_content"
       android:layout_height="19dp"
       android:text="id"
-      android:textSize="16sp"/>
+      android:textSize="16dp"/>
 
     <LinearLayout
       android:orientation="horizontal"
@@ -48,7 +48,7 @@
           android:layout_marginTop="4dp"
           android:layout_gravity="right"
           android:text="0"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:gravity="center"
           android:layout_width="30dp"
           android:layout_height="19dp"
@@ -81,7 +81,7 @@
           android:layout_marginTop="4dp"
           android:layout_gravity="right"
           android:text="0"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:gravity="center"
           android:layout_width="30dp"
           android:layout_height="19dp"
@@ -107,7 +107,7 @@
     <TextView
       android:id="@+id/tv_reply_comment"
       android:text="reply"
-      android:textSize="16sp"
+      android:textSize="16dp"
       android:gravity="left|center"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
@@ -121,7 +121,7 @@
     <TextView
       android:id="@+id/tv_reply_date"
       android:text="date"
-      android:textSize="11sp"
+      android:textSize="11dp"
       android:gravity="left|center"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
