--- a/app/src/main/res/layout/fragment_setting_cs.xml
+++ b/app/src/main/res/layout/fragment_setting_cs.xml
@@ -27,7 +27,7 @@
           android:layout_marginLeft="16dp"
           android:layout_marginTop="18dp"
           android:text="문의"
-          android:textSize="14sp"
+          android:textSize="14dp"
           android:textColor="#6d6d6d"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
@@ -50,7 +50,7 @@
           android:layout_marginLeft="16dp"
           android:text="사용문의"
           android:textColor="#333333"
-          android:textSize="15sp"
+          android:textSize="15dp"
           android:layout_gravity="center_vertical|left"
           android:layout_centerVertical="true"
           android:layout_width="wrap_content"
@@ -91,7 +91,7 @@
           android:layout_marginLeft="16dp"
           android:text="광고문의"
           android:textColor="#333333"
-          android:textSize="15sp"
+          android:textSize="15dp"
           android:layout_gravity="center_vertical|left"
           android:layout_centerVertical="true"
           android:layout_width="wrap_content"
@@ -131,7 +131,7 @@
           android:layout_marginLeft="16dp"
           android:layout_marginTop="18dp"
           android:text="약관"
-          android:textSize="14sp"
+          android:textSize="14dp"
           android:textColor="#6d6d6d"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
@@ -153,7 +153,7 @@
           app:fontWeight="medium"
           android:layout_marginLeft="16dp"
           android:text="서비스 이용약관"
-          android:textSize="15sp"
+          android:textSize="15dp"
           android:textColor="#333333"
           android:layout_centerVertical="true"
           android:layout_gravity="center_vertical|left"
@@ -195,7 +195,7 @@
           app:fontWeight="medium"
           android:layout_marginLeft="16dp"
           android:text="개인정보 취급방침"
-          android:textSize="15sp"
+          android:textSize="15dp"
           android:textColor="#333333"
           android:layout_gravity="center_vertical|left"
           android:layout_centerVertical="true"
@@ -239,7 +239,7 @@
           app:fontWeight="medium"
           android:layout_marginLeft="16dp"
           android:text="위치기반 서비스 이용약관"
-          android:textSize="15sp"
+          android:textSize="15dp"
           android:textColor="#333333"
           android:layout_gravity="center_vertical|left"
           android:layout_centerVertical="true"
@@ -283,7 +283,7 @@
           android:layout_marginLeft="16dp"
           android:layout_marginTop="18dp"
           android:text="기타"
-          android:textSize="14sp"
+          android:textSize="14dp"
           android:textColor="#6d6d6d"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
@@ -307,7 +307,7 @@
           android:layout_marginLeft="16dp"
           android:text="회원탈퇴"
           android:textColor="#333333"
-          android:textSize="15sp"
+          android:textSize="15dp"
           android:layout_centerVertical="true"
           android:layout_gravity="center_vertical|left"
           android:layout_width="wrap_content"
