--- a/app/src/main/res/layout/fragment_setting_cs_personal.xml
+++ b/app/src/main/res/layout/fragment_setting_cs_personal.xml
@@ -24,7 +24,7 @@
       app:fontWeight="medium"
       android:text="개인정보 취급방침"
       android:textColor="@color/colorBlack"
-      android:textSize="20sp"
+      android:textSize="20dp"
       android:gravity="center"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
@@ -46,7 +46,7 @@
         android:text="@string/string_personal"
         app:fontWeight="regular"
         android:textColor="#333333"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:layout_margin="16dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
