--- a/app/src/main/res/layout/fragment_setting_user.xml
+++ b/app/src/main/res/layout/fragment_setting_user.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="24dp"
         android:layout_marginBottom="8dp"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:textColor="@color/colorBlack"
         android:text="이메일"
         android:gravity="left" />
@@ -33,7 +33,7 @@
         android:background="@drawable/edittext"
         android:layout_width="match_parent"
         android:layout_height="54dp"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:id="@+id/edt_setting_email"
         android:textColor="#6D6D6D"
         android:ems="15"
@@ -58,7 +58,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="8dp"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:textColor="@color/colorBlack"
         android:text="비밀번호"
         android:gravity="left" />
@@ -68,7 +68,7 @@
         android:background="@drawable/edittext"
         android:layout_width="match_parent"
         android:layout_height="54dp"
-        android:textSize="15sp"
+        android:textSize="15dp"
         android:id="@+id/edt_setting_pw"
         android:textColorHint="#6D6D6D"
         android:hint="비밀번호를 입력하세요"
@@ -84,7 +84,7 @@
         android:background="@drawable/edittext"
         android:layout_width="match_parent"
         android:layout_height="54dp"
-        android:textSize="15sp"
+        android:textSize="15dp"
         android:id="@+id/edt_setting_repw"
         android:textColorHint="#6D6D6D"
         android:hint="비밀번호를 다시 입력하세요"
@@ -101,7 +101,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="5dp"
-        android:textSize="12sp"
+        android:textSize="12dp"
         android:textColor="#333333"
         android:text="8-15자 이내, 숫자와 영문으로 조합해주세요."
         android:gravity="left" />
@@ -117,7 +117,7 @@
       android:layout_height="54dp"
       android:layout_marginBottom="20dp"
       android:id="@+id/btn_setting_user_modify"
-      android:textSize="16sp"
+      android:textSize="16dp"
       android:text="수정하기"
       android:textColor="@color/colorWhite"
       android:background="@drawable/button_puzi"/>
