--- a/app/src/main/res/layout/fragment_signup_info.xml
+++ b/app/src/main/res/layout/fragment_signup_info.xml
@@ -36,7 +36,7 @@
           app:fontWeight="medium"
           android:text="회원가입"
           android:textColor="@color/colorBlack"
-          android:textSize="20sp"
+          android:textSize="20dp"
           android:gravity="center"
           android:layout_width="match_parent"
           android:layout_height="match_parent"/>
@@ -64,7 +64,7 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="left"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="@color/colorBlack"
           android:text="성별"/>
 
@@ -79,7 +79,7 @@
           <RadioButton
             android:button="@drawable/check_button_selector"
             android:text="남자"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="#6D6D6D"
             android:layout_gravity="left"
             android:layout_width="match_parent"
@@ -93,7 +93,7 @@
           <RadioButton
             android:button="@drawable/check_button_selector"
             android:text="여자"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="#6D6D6D"
             android:layout_gravity="right"
             android:layout_width="match_parent"
@@ -121,7 +121,7 @@
           android:layout_width="match_parent"
           android:layout_height="24dp"
           android:gravity="left"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="@color/colorBlack"
           android:text="출생년도"/>
 
@@ -161,7 +161,7 @@
           android:layout_width="match_parent"
           android:layout_height="24dp"
           android:gravity="left"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="@color/colorBlack"
           android:text="거주지역"/>
 
@@ -232,7 +232,7 @@
           android:layout_width="match_parent"
           android:layout_height="24dp"
           android:gravity="left"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="@color/colorBlack"
           android:text="관심분야"/>
 
@@ -255,7 +255,7 @@
               android:background="@drawable/button_favorite_off"
               android:id="@+id/btn_info_beauty"
               android:text="뷰티"
-              android:textSize="16sp"
+              android:textSize="16dp"
               android:textColor="@color/colorTextGray"
               android:layout_weight="1"
               android:layout_width="match_parent"
@@ -270,7 +270,7 @@
               android:background="@drawable/button_favorite_off"
               android:id="@+id/btn_info_shopping"
               android:text="쇼핑"
-              android:textSize="16sp"
+              android:textSize="16dp"
               android:layout_weight="1"
               android:textColor="@color/colorTextGray"
               android:layout_width="match_parent"
@@ -290,7 +290,7 @@
               android:background="@drawable/button_favorite_off"
               android:id="@+id/btn_info_game"
               android:text="게임"
-              android:textSize="16sp"
+              android:textSize="16dp"
               android:textColor="@color/colorTextGray"
               android:layout_weight="1"
               android:layout_width="match_parent"
@@ -305,7 +305,7 @@
               android:background="@drawable/button_favorite_off"
               android:id="@+id/btn_info_eat"
               android:text="외식"
-              android:textSize="16sp"
+              android:textSize="16dp"
               android:textColor="@color/colorTextGray"
               android:layout_weight="1"
               android:layout_width="match_parent"
@@ -325,7 +325,7 @@
               android:background="@drawable/button_favorite_off"
               android:id="@+id/btn_info_tour"
               android:text="여행\n(항공,호텔)"
-              android:textSize="16sp"
+              android:textSize="16dp"
               android:textColor="@color/colorTextGray"
               android:layout_weight="1"
               android:layout_width="match_parent"
@@ -340,7 +340,7 @@
               android:background="@drawable/button_favorite_off"
               android:id="@+id/btn_info_finance"
               android:text="금융\n(보험,제테크)"
-              android:textSize="16sp"
+              android:textSize="16dp"
               android:textColor="@color/colorTextGray"
               android:layout_weight="1"
               android:layout_width="match_parent"
@@ -359,7 +359,7 @@
               android:background="@drawable/button_favorite_off"
               android:id="@+id/btn_info_culture"
               android:text="문화\n(콘서트,공연)"
-              android:textSize="16sp"
+              android:textSize="16dp"
               android:textColor="@color/colorTextGray"
               android:layout_weight="1"
               android:layout_width="match_parent"
@@ -384,7 +384,7 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_marginTop="9dp"
-          android:textSize="12sp"
+          android:textSize="12dp"
           android:text="3개 이상 선택해주세요"
           android:gravity="left"/>
 
@@ -405,7 +405,7 @@
           android:layout_height="24dp"
           android:layout_marginBottom="5dp"
           android:gravity="left"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:textColor="@color/colorBlack"
           android:text="추천 아이디 (선택)"/>
 
@@ -413,7 +413,7 @@
           app:fontWeight="regular"
           android:layout_width="match_parent"
           android:layout_height="54dp"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:maxLines="1"
           android:id="@+id/edit_recommend"
           android:hint="추천인 아이디를 입력해주세요"
@@ -441,7 +441,7 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="left|center_vertical"
-          android:textSize="16sp"
+          android:textSize="16dp"
           android:layout_marginBottom="6dp"
           android:textColor="@color/colorBlack"
           android:text="약관동의"/>
@@ -459,7 +459,7 @@
           <kr.puzi.puzi.ui.customview.NotoButton
             app:fontWeight="regular"
             android:text="@string/confirm_service"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="#6D6D6D"
             android:gravity="center_vertical"
             android:layout_width="wrap_content"
@@ -472,7 +472,7 @@
           <kr.puzi.puzi.ui.customview.NotoButton
             app:fontWeight="regular"
             android:text="@string/confirm_personal"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:textColor="#6D6D6D"
             android:gravity="center_vertical"
             android:layout_width="wrap_content"
@@ -498,7 +498,7 @@
               android:layout_marginLeft="42dp"
               android:gravity="center_vertical"
               android:text="약관 전체 동의"
-              android:textSize="16sp"
+              android:textSize="16dp"
               android:textColor="@color/colorTextGray"
               android:layout_width="100dp"
               android:layout_height="match_parent"/>
@@ -522,7 +522,7 @@
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         android:id="@+id/btn_signup_ok"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:text="회원가입"
         android:background="@drawable/button_puzi"
         android:textColor="@color/colorWhite"/>
