--- a/app/src/main/res/layout/item_block_company.xml
+++ b/app/src/main/res/layout/item_block_company.xml
@@ -31,7 +31,7 @@
       android:layout_gravity="center_vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:textSize="16sp"
+      android:textSize="16dp"
       android:fontFamily="sans-serif"
       android:textStyle="normal"
       android:textColor="#333333"
