--- a/app/src/main/res/layout/item_channel_list_channel.xml
+++ b/app/src/main/res/layout/item_channel_list_channel.xml
@@ -43,7 +43,7 @@
         app:fontWeight="regular"
         android:focusable ="false"
         android:text="title"
-        android:textSize="10sp"
+        android:textSize="10dp"
         android:textColor="#666666"
         android:layout_marginTop="1dp"
         android:typeface="sans"
@@ -59,7 +59,7 @@
         app:fontWeight="medium"
         android:focusable ="false"
         android:text="title\n안녕"
-        android:textSize="15sp"
+        android:textSize="15dp"
         android:textColor="#333333"
         android:layout_marginTop="3dp"
         android:typeface="sans"
@@ -118,7 +118,7 @@
           app:fontWeight="demilight"
           android:layout_gravity="center_vertical"
           android:text="5.0/5.0"
-          android:textSize="12sp"
+          android:textSize="12dp"
           android:textColor="#6d6d6d"
           android:typeface="sans"
           android:layout_width="match_parent"
