--- a/app/src/main/res/layout/item_channel_list_channel_in_company.xml
+++ b/app/src/main/res/layout/item_channel_list_channel_in_company.xml
@@ -41,7 +41,7 @@
       <kr.puzi.puzi.ui.customview.NotoButton
         app:fontWeight="medium"
         android:text="title"
-        android:textSize="15sp"
+        android:textSize="15dp"
         android:textColor="#333333"
         android:layout_marginTop="3dp"
         android:typeface="sans"
@@ -100,7 +100,7 @@
           app:fontWeight="demilight"
           android:layout_gravity="center_vertical"
           android:text="5.0/5.0"
-          android:textSize="12sp"
+          android:textSize="12dp"
           android:textColor="#6d6d6d"
           android:typeface="sans"
           android:layout_width="match_parent"
@@ -137,7 +137,7 @@
       <kr.puzi.puzi.ui.customview.NotoButton
         app:fontWeight="medium"
         android:text="title"
-        android:textSize="15sp"
+        android:textSize="15dp"
         android:textColor="#333333"
         android:layout_marginTop="3dp"
         android:typeface="sans"
@@ -195,7 +195,7 @@
           app:fontWeight="demilight"
           android:layout_gravity="center_vertical"
           android:text="5.0/5.0"
-          android:textSize="12sp"
+          android:textSize="12dp"
           android:textColor="#9b9b9b"
           android:typeface="sans"
           android:layout_width="match_parent"
