--- a/app/src/main/res/layout/item_channel_list_editorspage.xml
+++ b/app/src/main/res/layout/item_channel_list_editorspage.xml
@@ -43,7 +43,7 @@
         android:maxLines="2"
         android:ellipsize="end"
         android:typeface="sans"
-        android:textSize="15sp"
+        android:textSize="15dp"
         android:textColor="#ffffff"
         android:gravity="center_horizontal"
         android:layout_marginRight="70dp"
@@ -59,7 +59,7 @@
         android:typeface="sans"
         android:textStyle="normal"
         android:textColor="#ffffff"
-        android:textSize="10sp"
+        android:textSize="10dp"
         android:layout_gravity="center_horizontal"
         android:fontFamily="sans-serif-light"
         android:id="@+id/tv_item_channel_editor_name"/>
