--- a/app/src/main/res/layout/item_coupon_used_child.xml
+++ b/app/src/main/res/layout/item_coupon_used_child.xml
@@ -37,7 +37,7 @@
         android:layout_weight="1"
         android:layout_marginStart="9dp"
         android:layout_marginEnd="9dp"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:textColor="#333333"
         android:id="@+id/tv_used_coupon_name"/>
 
@@ -48,7 +48,7 @@
         android:layout_gravity="right"
         android:layout_marginBottom="12dp"
         android:layout_marginRight="10dp"
-        android:textSize="20sp"
+        android:textSize="20dp"
         android:fontFamily="sans-serif-medium"
         android:textStyle="normal"
         android:textColor="#333333"
@@ -80,7 +80,7 @@
   <kr.puzi.puzi.ui.customview.RobotoTextView
     android:id="@+id/tv_used_coupon_date"
     android:layout_gravity="center"
-    android:textSize="12sp"
+    android:textSize="12dp"
     android:textColor="#6d6d6d"
     android:layout_marginTop="8dp"
     android:layout_width="wrap_content"
