--- a/app/src/main/res/layout/item_myworry_write_price_selected.xml
+++ b/app/src/main/res/layout/item_myworry_write_price_selected.xml
@@ -26,7 +26,7 @@
       android:id="@+id/tv_item_myworry_write_price"
       app:fontWeight="regular"
       android:text="포인트답변수"
-      android:textSize="12sp"
+      android:textSize="12dp"
       android:gravity="center_horizontal"
       android:textColor="#ff2470"
       android:layout_width="match_parent"
