--- a/app/src/main/res/layout/item_question_category.xml
+++ b/app/src/main/res/layout/item_question_category.xml
@@ -11,7 +11,7 @@
         android:gravity="center"
         android:padding="2dp"
         android:text="여성"
-        android:textSize="10sp"
+        android:textSize="10dp"
         android:id="@+id/tv_vote_category"
         android:layout_width="30dp"
         android:layout_height="16dp"/>
