--- a/app/src/main/res/layout/item_question_time.xml
+++ b/app/src/main/res/layout/item_question_time.xml
@@ -38,7 +38,7 @@
         <kr.puzi.puzi.ui.customview.NotoTextView
           app:fontWeight="medium"
           android:text="나의 오늘은"
-          android:textSize="13sp"
+          android:textSize="13dp"
           android:textColor="@color/colorWhite"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
@@ -58,7 +58,7 @@
           <kr.puzi.puzi.ui.customview.NotoTextView
             app:fontWeight="medium"
             android:text="1"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:textColor="@color/colorWhite"
             android:id="@+id/tv_question_hour"
             android:layout_width="wrap_content"
@@ -68,7 +68,7 @@
             app:fontWeight="medium"
               android:id="@+id/tv_question_hour_string"
             android:text="시간 "
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:textColor="@color/colorWhite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -76,7 +76,7 @@
           <kr.puzi.puzi.ui.customview.NotoTextView
             app:fontWeight="medium"
             android:text="5"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:textColor="@color/colorWhite"
             android:id="@+id/tv_question_minute"
             android:layout_width="wrap_content"
@@ -86,7 +86,7 @@
               app:fontWeight="medium"
               android:id="@+id/tv_question_minute_string"
               android:text="분 "
-              android:textSize="18sp"
+              android:textSize="18dp"
               android:textColor="@color/colorWhite"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
@@ -94,7 +94,7 @@
           <kr.puzi.puzi.ui.customview.NotoTextView
             app:fontWeight="medium"
             android:text="10"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:textColor="@color/colorWhite"
             android:id="@+id/tv_question_second"
             android:layout_width="wrap_content"
@@ -104,7 +104,7 @@
             app:fontWeight="medium"
             android:id="@+id/tv_question_second_string"
             android:text="초"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:textColor="@color/colorWhite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -112,7 +112,7 @@
           <kr.puzi.puzi.ui.customview.NotoTextView
             app:fontWeight="medium"
             android:text=" 후 참여 가능합니다."
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:textColor="@color/colorWhite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
