--- a/app/src/main/res/layout/item_question_vote.xml
+++ b/app/src/main/res/layout/item_question_vote.xml
@@ -45,7 +45,7 @@
             app:fontWeight="regular"
             android:id="@+id/tv_worry_progress"
             android:text="1"
-            android:textSize="10sp"
+            android:textSize="10dp"
             android:textColor="@color/colorPuzi"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"/>
@@ -54,7 +54,7 @@
             android:gravity="center"
             app:fontWeight="regular"
             android:text="%"
-            android:textSize="6sp"
+            android:textSize="6dp"
             android:textColor="@color/colorPuzi"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"/>
@@ -122,7 +122,7 @@
           android:ellipsize="marquee"
           android:marqueeRepeatLimit="marquee_forever"
           android:singleLine="true"
-          android:textSize="16sp"
+          android:textSize="16dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
         android:layout_marginRight="10dp"
