--- a/app/src/main/res/layout/item_spinner_down.xml
+++ b/app/src/main/res/layout/item_spinner_down.xml
@@ -13,7 +13,7 @@
       android:id="@+id/tv_spinner_down"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
-      android:textSize="14sp"
+      android:textSize="14dp"
       android:textColor="#6d6d6d"/>
 
 </LinearLayout>
