--- a/app/src/main/res/layout/item_store_brand_group.xml
+++ b/app/src/main/res/layout/item_store_brand_group.xml
@@ -9,7 +9,7 @@
     android:text="TextView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textSize="15sp"
+    android:textSize="15dp"
     android:textColor="#333333"
     android:layout_marginStart="16dp"
     android:layout_marginBottom="15dp"
